Fix full-page scrollbar.

--- a/app/client/boot/boot.css
+++ b/app/client/boot/boot.css
@@ -5,6 +5,7 @@ html, body, #container {
 body {
   background: url(/img/simple_dashed.png);
   color: #fff;
+  padding-top: 25px;
   -webkit-user-select: none;
 }
 
@@ -15,7 +16,6 @@ body {
 #container {
   margin: 0 auto;
   width: 1140px;
-  margin-top: 25px;
   position: relative;
 }
 
